--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       href="https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Josefin+Slab:ital,wght@0,400;0,600;1,300;1,400;1,600&family=Muli:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Architect</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
